# cheribsd-ports

Mk/: bsd.port.mk
lang/v8/files/: CMakeLists.txt  patch-build_config_compiler_BUILD.gn  patch-build_config_compiler_compiler.gni  patch-build_config_features.gni  patch-build_config_sysroot.gni  patch-build_detect__host__arch.py  patch-build_toolchain_gcc__toolchain.gni  patch-build_toolchain_toolchain.gni  patch-gni_v8.gni  patch-third__party_zlib_BUILD.gn  patch-third__party_zlib_cpu__features.c
lang/vala/: Makefile
