--- build/config/features.gni.orig	2020-09-19 19:50:44 UTC
+++ build/config/features.gni
@@ -32,7 +32,7 @@ declare_args() {
   proprietary_codecs = is_chrome_branded || is_chromecast
 
   # libudev usage. This currently only affects the content layer.
-  use_udev = (is_linux && !is_castos) || is_chromeos
+  use_udev = (is_linux && !is_castos) || is_chromeos && !is_bsd
 
   use_dbus = (is_linux || is_chromeos) && !is_chromecast
 
