--- build/config/sysroot.gni.orig	2023-11-09 13:21:14.000000000 +0000
+++ build/config/sysroot.gni	2024-01-25 18:37:34.935572000 +0000
@@ -19,10 +19,11 @@
 
   # Controls default is_linux sysroot. If set to true, and sysroot
   # is empty, default sysroot is calculated.
-  use_sysroot =
-      current_cpu == "x86" || current_cpu == "x64" || current_cpu == "arm" ||
-      current_cpu == "arm64" || current_cpu == "mipsel" ||
-      current_cpu == "mips64el" || (current_cpu == "riscv64" && is_android)
+  use_sysroot = !is_bsd && (
+          current_cpu == "x86" || current_cpu == "x64" || current_cpu == "arm" ||
+          current_cpu == "arm64" || current_cpu == "mipsel" ||
+          current_cpu == "mips64el" || (current_cpu == "riscv64" && is_android)
+      )
 }
 
 if (sysroot == "") {
