--- build/toolchain/gcc_toolchain.gni.orig	2022-06-24 13:58:35.000000000 +0000
+++ build/toolchain/gcc_toolchain.gni	2022-12-15 11:33:17.354996000 +0000
@@ -32,6 +32,10 @@
   # Use -MD instead of -MMD for compiler commands. This is useful for tracking
   # the comprehensive set of dependencies.
   system_headers_in_deps = false
+  extra_cflags = ""
+  extra_cppflags = ""
+  extra_cxxflags = ""
+  extra_ldflags = ""
 }

 # When the arg is set via args.gn, it applies to all toolchains. In order to not
@@ -786,13 +790,12 @@
 # use_gold too.
 template("clang_toolchain") {
   gcc_toolchain(target_name) {
-    prefix = rebase_path("$clang_base_path/bin", root_build_dir)
-    cc = "${prefix}/clang"
-    cxx = "${prefix}/clang++"
+    cc = "cc"
+    cxx = "c++"
     ld = cxx
-    readelf = "${prefix}/llvm-readelf"
-    ar = "${prefix}/llvm-ar"
-    nm = "${prefix}/llvm-nm"
+    readelf = "readelf"
+    ar = "ar"
+    nm = "nm"

     forward_variables_from(invoker,
                            [
