--- build/toolchain/toolchain.gni.orig	2024-01-25 18:31:16.031262000 +0000
+++ build/toolchain/toolchain.gni	2024-01-25 18:33:00.914756000 +0000
@@ -72,7 +72,7 @@
   host_shlib_extension = ".dylib"
 } else if (host_os == "win") {
   host_shlib_extension = ".dll"
-} else if (host_os == "linux" || host_os == "aix") {
+} else if (host_os == "linux" || host_os == "aix" || host_os == "freebsd") {
   host_shlib_extension = ".so"
 } else {
   assert(false, "Host platform not supported")
