--- gni/v8.gni.orig	2024-02-01 14:34:18.968985000 +0000
+++ gni/v8.gni	2024-02-01 14:34:34.205931000 +0000
@@ -99,7 +99,7 @@
   # Enable FuzzTest
   v8_enable_fuzztest =
       !build_with_chromium && !(defined(build_with_node) && build_with_node) &&
-      !(is_win && is_component_build) && is_clang
+      !(is_win && is_component_build) && is_clang && !is_bsd
 
   # Scan the call stack conservatively during garbage collection.
   v8_enable_conservative_stack_scanning = false
